@@ -1,3 +1,2 @@
 ./admin/configure.in.min
 configure.in.in
-./rkward-0.2.0/configure.in.in
