@@ -4,18 +4,40 @@
 	<entry type="entry" id="NA" label="Non-existent test"/>
 
 	<layout>
-		<row>
+		<column>
 			<text>
 				This plugin is not implemented. It's only here, to populate the menus a little.
 				Did you notice, that all plugins are constructed at runtime and on the fly from XML-files?
 				Try Analyse->Means->T-Tests->Independent Samples T-Test or Analyse->Descriptive Statistics.
 			</text>
-			<frame label="a frame">
-				<text>
-					This is text in a frame.
-				</text>
-			</frame>
-		</row>
+			<tabbook>
+				<tab label="first tab">
+					<frame label="a frame">
+						<text>
+							This is text in a frame.
+						</text>
+					</frame>
+				</tab>
+				<tab label="second tab">
+					<tabbook>
+						<tab label="1.1">
+							<frame label="1.1 frame">
+								<text>
+									This is text in a frame.
+								</text>
+							</frame>
+						</tab>
+						<tab label="1.2">
+							<frame label="1.2 frame">
+								<text>
+									This is text in a frame.
+								</text>
+							</frame>
+						</tab>
+					</tabbook>
+				</tab>
+			</tabbook>
+		</column>
 	</layout>
 
 </document>
